# moscow-postamats-map

./: README (1).md  README.md  api.py  docker-compose.yaml  package-lock.json  package.json  requirements.txt  setup.py
data_handler/: data_for_js_file.txt  district_points_OLD.txt  (+8 more)
django-moscow-postamats-map/: MANIFEST.in  README.rst  conf.py  pyproject.toml  setup.cfg  setup.py
django-moscow-postamats-map/map/: urls.py  views.py
django-moscow-postamats-map/map/static/: get_neuro_data.js  main.js  polylabel.js
django-moscow-postamats-map/map/static/areas/: get_areas_arr.js
django-moscow-postamats-map/map/static/areas/polygons/: polygon0.js  polygon14.js  polygon21.js  polygon3.js  polygon31.js  polygon32.js  polygon5.js  polygon6.js  polygon7.js
django-moscow-postamats-map/map/static/districts/polylabels/: polylabel0.js  polylabel104.js  polylabel105.js  polylabel107.js  polylabel109.js  polylabel114.js  polylabel120.js  polylabel22.js  polylabel23.js  polylabel27.js  polylabel31.js  polylabel38.js  polylabel41.js  polylabel52.js  polylabel57.js  polylabel60.js  polylabel70.js  polylabel74.js  polylabel79.js  polylabel80.js  polylabel81.js  polylabel84.js  polylabel92.js  polylabel93.js  polylabel95.js  polylabel99.js
django-moscow-postamats-map/map/static/heatmaps/houses/: get_houses_data.js
django-moscow-postamats-map/map/static/heatmaps/postamats/: get_postamats_data.js
django-moscow-postamats-map/map/static/placemarks/: placemarks_handler.js
django-moscow-postamats-map/map/static/placemarks/cultures/: get_cultures_arr.js
django-moscow-postamats-map/map/static/site_files/: main.js
django-moscow-postamats-map/map/templates/map/: index.html  map.html
django-moscow-postamats-map/model/: dk_regional.json  mfc_regional.json  sport_regional.json  tc_regional.json
(+150 files in other folders)
