[metadata]
name = django-moscow-postamats-map
version = 0.1.3
description = A Django app to find best locations for postamats.
long_description = file: README.rst
url = https://github.com/Angel367/moscow-postamats-map
author = Pashkova Volkov Bratushka
license = MIT  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django == 4.2